force-app/main/default/objects/Compliance_Task__c/Compliance_Task__c.object-meta.xml
<CustomObject>
    <label>Compliance Task</label>
    <pluralLabel>Compliance Tasks</pluralLabel>
    <description>Object used to track and manage compliance tasks related to provider applications within the organization.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Compliance Task Name</label>
        <type>AutoNumber</type>
        <displayFormat>CT-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>