force-app/main/default/objects/Compliance_Task__c/fields/Provider_Application__c.field-meta.xml
<CustomField>
    <fullName>Provider_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this compliance task to a provider application</description>
    <inlineHelpText>Select the related provider application for this compliance task</inlineHelpText>
    <label>Provider Application</label>
    <referenceTo>Provider_Application__c</referenceTo>
    <relationshipLabel>Compliance Tasks</relationshipLabel>
    <relationshipName>Compliance_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>