force-app/main/default/objects/Compliance_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <description>Brief description of the compliance task</description>
    <inlineHelpText>Enter a descriptive title for the compliance task</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>