force-app/main/default/objects/Compliance_Task__c/listViews/Compliance_Review_Queue_Compliance_Task.listView-meta.xml
<ListView>
    <fullName>Compliance_Review_Queue_Compliance_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance Review Queue</label>
    <queue>Compliance_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>